--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -586,7 +586,7 @@ a.sidebar-link:hover svg
 
 .fc-day-grid .fc-state-highlight
 {
-    background: #36444f !important;
+    background: #2583A7 !important;
 }
 
 .fc-day-grid .fc-state-highlight *,
