--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -560,15 +560,6 @@ a.sidebar-link:hover svg
     border-radius: 2em;
 }
 
-.fc-day-grid .fc-day-grid-event .sgapp-event-title,
-.fc-popover-body .sgapp-event-title
-{
-    color: #374550;
-    font-size: 1.35em;
-    font-weight: bold;
-    width: 100%;
-}
-
 .fc-day-grid .fc-day-grid-event .sgapp-event-cell-row:not(:first-child),
 .fc-dayGridMonth-view .sgapp-event-cell-row:not(:first-child),
 .fc-popover-body .sgapp-event-cell-row:not(:first-child)
@@ -581,27 +572,6 @@ a.sidebar-link:hover svg
 .fc-popover-body .sgapp-event-cell-row:not(:last-child)
 {
     margin-bottom: 0.25em;
-}
-
-.fc-day-grid .fc-day-grid-event .sgapp-event-staff-id,
-.fc-dayGridMonth-view .sgapp-event-staff-id,
-.fc-popover-body .sgapp-event-staff-id
-{
-    color: #2583a7;
-    font-size: 1em;
-}
-
-.fc-day-grid .fc-day-grid-event .sgapp-event-time,
-.fc-dayGridMonth-view .sgapp-event-time,
-.fc-popover-body .sgapp-event-time
-{
-    background: #fefefe;
-    color: #374550;
-    font-size: 1em;
-    font-weight: 500;
-    padding: 0.5em;
-    display: inline-block;
-    border-radius: 0.25em;
 }
 
 .sgapp-inline-block
@@ -682,8 +652,8 @@ input[type="text"].form-control
 .fc-dayGridMonth-view .fc-event,
 .fc-popover-body .fc-event
 {
-    background: #e5f3f6 !important;
-    border: 1px solid #bfdee6 !important;
+    background: #e5f3f6;
+    border: 1px solid #bfdee6;
 }
 
 .fc-dayGridMonth-view .fc-event .sgapp-event-cell-wrapper,
@@ -705,6 +675,37 @@ input[type="text"].form-control
 a.fc-col-header-cell-cushion
 {
     color: #374550;
+}
+
+.fc-day-grid .fc-day-grid-event .sgapp-event-title,
+.fc-popover-body .sgapp-event-title,
+.fc-dayGridMonth-view .sgapp-event-cell-wrapper .sgapp-event-title
+{
+    color: #374550 !important;
+    font-size: 1.35em !important;
+    font-weight: bold;
+    width: 100%;
+}
+
+.fc-day-grid .fc-day-grid-event .sgapp-event-staff-id,
+.fc-dayGridMonth-view .sgapp-event-staff-id,
+.fc-popover-body .sgapp-event-staff-id
+{
+    color: #2583a7 !important;
+    font-size: 1em;
+}
+
+.fc-day-grid .fc-day-grid-event .sgapp-event-time,
+.fc-dayGridMonth-view .sgapp-event-time,
+.fc-popover-body .sgapp-event-time
+{
+    background: #fefefe;
+    color: #374550 !important;
+    font-size: 1em;
+    font-weight: 500;
+    padding: 0.5em;
+    display: inline-block;
+    border-radius: 0.25em;
 }
 
 @media only screen and (max-width: 768px)
@@ -1233,7 +1234,8 @@ body[data-theme="dark"] .fc-day-grid .fc-day-grid-event
 body[data-theme="dark"] .fc-day-grid .fc-day-grid-event,
 body[data-theme="dark"] .fc-day-grid .sgapp-event-title,
 body[data-theme="dark"] .fc-day-grid .sgapp-event-staff-id,
-body[data-theme="dark"] .fc-day-grid .sgapp-event-time
+body[data-theme="dark"] .fc-day-grid .sgapp-event-time,
+body[data-theme="dark"] .sgapp-event-cell-wrapper .sgapp-event-title
 {
     color: var(--darkPrimaryTextColor) !important;
 }
